--- a/GalacticLib.Math.csproj
+++ b/GalacticLib.Math.csproj
@@ -8,10 +8,12 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     <Title>GalacticLib (Math)</Title>
-    <Copyright>2022 Galacticai</Copyright>
+	<Copyright>©2022 Galacticai</Copyright>
     <PackageProjectUrl>https://github.com/Galacticai/GalacticLib.Math</PackageProjectUrl>
     <PackageTags>Galacticai;GalacticLib;Lib;Library;Math;Mathematics;</PackageTags>
     <NeutralLanguage>en-001</NeutralLanguage>
+	<Authors>Galacticai</Authors>
+    <VersionPrefix>0.1.0.1</VersionPrefix>
     <AssemblyVersion>0.1.0.1</AssemblyVersion>
     <FileVersion>0.1.0.1</FileVersion>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
