--- a/GalacticLib.Math.csproj
+++ b/GalacticLib.Math.csproj
@@ -10,14 +10,14 @@
         <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
         <Title>GalacticLib (Math)</Title>
     	<Copyright>©2022 Galacticai</Copyright>
-        <PackageProjectUrl>https://github.com/Galacticai/GalacticLib.Math</PackageProjectUrl>
+        <PackageProjectUrl>https://Galacticai.github.io/GalacticLib</PackageProjectUrl>
         <PackageRepositoryUrl>https://github.com/Galacticai/GalacticLib.Math</PackageRepositoryUrl>
         <PackageTags>Galacticai;GalacticLib;Lib;Library;Math;Mathematics;</PackageTags>
         <NeutralLanguage>en-001</NeutralLanguage>
     	<Authors>Galacticai</Authors>
-        <VersionPrefix>0.2.2.1</VersionPrefix>
-        <AssemblyVersion>0.2.2.1</AssemblyVersion>
-        <FileVersion>0.2.2.1</FileVersion>
+        <VersionPrefix>0.2.3</VersionPrefix>
+        <AssemblyVersion>0.2.3</AssemblyVersion>
+        <FileVersion>0.2.3</FileVersion>
         <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
